@@ -1,5 +1,12 @@
 2006-08-07  Christian Persch  <chpe@cvs.gnome.org>
 
+	* embed/mozilla/mozilla-embed-single.cpp:
+
+	Use AutoJSContextStack on window open.
+	Disable XPrint.
+
+2006-08-07  Christian Persch  <chpe@cvs.gnome.org>
+
 	* data/default-prefs-common.js:
 	
 	Set printer name setting.
